--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "swiper": "^11.2.2",
     "yup": "^1.6.1"
   },
